--- a/.github/workflows/latex.yml
+++ b/.github/workflows/latex.yml
@@ -7,6 +7,8 @@ jobs:
     runs-on: ubuntu-latest
     if: ${{ github.ref == 'refs/heads/main' }}
     steps:
+      - name: Set up Git repository
+        uses: actions/checkout@v3
       - name: Compile LaTeX document
         uses: xu-cheng/latex-action@v3
         with:
